WorkPriorityPanes icon fixes on mobile

--- a/src/components/WorkPriorityPanes/WorkPriorityPanes.scss
+++ b/src/components/WorkPriorityPanes/WorkPriorityPanes.scss
@@ -233,9 +233,10 @@ $longTransitionDuration: 500ms;
             display: flex;
 
             > img {
+              flex: 1;
               margin: 0;
-              max-height: 8rem;
-              max-width: 8rem;
+              height: 8rem;
+              width: 8rem;
             }
 
             > span {
@@ -243,7 +244,7 @@ $longTransitionDuration: 500ms;
             }
 
             h5 {
-              flex: 1 1 auto;
+              flex: 2;
               margin: 1.5rem 0 1.5rem 1.5rem;
               text-align: left;
             }
